--- a/aip.tex
+++ b/aip.tex
@@ -25,6 +25,9 @@
 \maketitle
 
 \newcommand{\CheckedBox}{\text{\rlap{$\checkmark$}}\Box}
+
+\!{Daniel was here}
+
 \details[inline]{
 TO DO LIST:
 \begin{enumerate}
