\renewcommand{\S}{\mathcal{S}} for graph

--- a/aip.tex
+++ b/aip.tex
@@ -16,6 +16,9 @@
 \newcommand{\denom}{d} %We should stick to the same notation for the denominator of a special point.  Sometimes D is used, but I would prefer a lowercase letter.  Lowercase "d" makes sense, but we use that for the dimension of the ambient polynomial ring.
 \newcommand{\fsr}{\mathcal{R}}
 
+
+\renewcommand{\S}{\mathcal{S}}
+
 \begin{document}
 
 \title[Fractal and arithmetic programs]{Fractal programs, arithmetic programs, and the Frobenius powers of monomial ideals}
